listar capacidades tecnologias